--- a/ts-app/package.json
+++ b/ts-app/package.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "eslint": "*",
-    "eslint-loader": "*",
+    "eslint-webpack-plugin": "*",
     "nodemon": "*",
     "ts-loader": "*",
     "ts-node": "*",
