--- a/ts-app/.vscode/launch.json
+++ b/ts-app/.vscode/launch.json
@@ -1,25 +1,27 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "调试程序",
-            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/nodemon",
-            "args": [
-                "--ext", "ts,tsx",
-                "--exec", "node",
-                "-r", "ts-node/register",
-                "--nolazy",
-                "${workspaceFolder}/src/app.ts"
-            ],
-            "cwd": "${workspaceFolder}",
-            "restart": true,
-            "console": "integratedTerminal",
-            "internalConsoleOptions": "neverOpen",
-            "skipFiles": [
-                "<node_internals>/**"
-            ]
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "调试程序",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/nodemon",
+      "env": { "NODE_ENV": "development" },
+      "args": [
+        "--ext",
+        "ts,tsx",
+        "--exec",
+        "node",
+        "-r",
+        "ts-node/register",
+        "--nolazy",
+        "${workspaceFolder}/src/app.ts"
+      ],
+      "cwd": "${workspaceFolder}",
+      "restart": true,
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "skipFiles": ["<node_internals>/**"]
+    }
+  ]
 }
