--- a/ts-app/tsconfig.json
+++ b/ts-app/tsconfig.json
@@ -1,19 +1,19 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "dist",
     "paths": { "@/*": ["src/*"] },
     "module": "commonjs",
-    "target": "es2017",
-    "noImplicitAny": true,
-    "sourceMap": true,
-    "outDir": "dist",
-    "watch": false,
+    "target": "ES2017",
     "strict": true,
+    "alwaysStrict": true,
+    "importHelpers": true,
+    "esModuleInterop": true,
+    "noImplicitAny": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "noImplicitThis": true,
-    "alwaysStrict": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
@@ -21,7 +21,5 @@
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*", "test/**/*"
-  ]
+  "include": ["src/**/*"]
 }
