fix: 修改vscode运行配置脚本

--- a/ts-app/.vscode/launch.json
+++ b/ts-app/.vscode/launch.json
@@ -2,26 +2,17 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "name": "Launch via NPM",
       "request": "launch",
-      "name": "调试程序",
-      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/nodemon",
-      "env": { "NODE_ENV": "development" },
-      "args": [
-        "--ext",
-        "ts,tsx",
-        "--exec",
-        "node",
-        "-r",
-        "ts-node/register",
-        "--nolazy",
-        "${workspaceFolder}/src/app.ts"
+      "runtimeArgs": [
+        "run-script",
+        "debug"
       ],
-      "cwd": "${workspaceFolder}",
-      "restart": true,
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen",
-      "skipFiles": ["<node_internals>/**"]
+      "runtimeExecutable": "npm",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "type": "node"
     }
   ]
 }
